--- a/public/css/new_custom.css
+++ b/public/css/new_custom.css
@@ -1,3 +1,6 @@
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, label{
+    color: white !important;
+}
 #top .navbar-static-top, #top .navbar{
     background: none !important;
 }
