Progress stock functionality 14/03/2019

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -24,7 +24,7 @@
     src: url('../fonts/Ubuntu-R.ttf');
 }
 body{
-    font-family: Ubuntu, Arial, sans-serif;
+    font-family: Ubuntu, Arial, sans-serif !important;
     color: white;
 }
 .card-header {
