--- a/public/css/new_custom.css
+++ b/public/css/new_custom.css
@@ -317,3 +317,223 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, label{
 .stock-view .chart-title span:nth-child(2){
     font-size: 18px;
 }
+
+*,::after,::before{box-sizing:border-box;}
+b{font-weight:bolder;}
+small{font-size:80%;}
+a{color:#007bff;text-decoration:none;background-color:transparent;-webkit-text-decoration-skip:objects;}
+a:hover{color:#0056b3;text-decoration:underline;}
+img{vertical-align:middle;border-style:none;}
+svg:not(:root){overflow:hidden;}
+table{border-collapse:collapse;}
+th{text-align:inherit;}
+button{border-radius:0;}
+button:focus{outline:1px dotted;outline:5px auto -webkit-focus-ring-color;}
+button{margin:0;font-family:inherit;font-size:inherit;line-height:inherit;}
+button{overflow:visible;}
+button{text-transform:none;}
+button,html [type="button"]{-webkit-appearance:button;}
+[type="button"]::-moz-focus-inner,button::-moz-focus-inner{padding:0;border-style:none;}
+.small,small{font-size:80%;font-weight:400;}
+.container{width:100%;padding-right:15px;padding-left:15px;margin-right:auto;margin-left:auto;}
+@media (min-width:576px){
+.container{max-width:540px;}
+}
+@media (min-width:768px){
+.container{max-width:720px;}
+}
+@media (min-width:992px){
+.container{max-width:960px;}
+}
+@media (min-width:1200px){
+.container{max-width:1140px;}
+}
+.table{width:100%;max-width:100%;margin-bottom:1rem;background-color:transparent;}
+.table td,.table th{padding:.75rem;vertical-align:top;border-top:1px solid #dee2e6;}
+.table thead th{vertical-align:bottom;border-bottom:2px solid #dee2e6;}
+.btn{display:inline-block;font-weight:400;text-align:center;white-space:nowrap;vertical-align:middle;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;border:1px solid transparent;padding:.375rem .75rem;font-size:1rem;line-height:1.5;border-radius:.25rem;transition:color .15s ease-in-out , background-color .15s ease-in-out , border-color .15s ease-in-out , box-shadow .15s ease-in-out;}
+.btn:focus,.btn:hover{text-decoration:none;}
+.btn:focus{outline:0;box-shadow:0 0 0 .2rem rgba(0,123,255,.25);}
+.btn.disabled,.btn:disabled{opacity:.65;}
+.btn:not(:disabled):not(.disabled){cursor:pointer;}
+a.btn.disabled{pointer-events:none;}
+.btn-secondary{color:#fff;background-color:#6c757d;border-color:#6c757d;}
+.btn-secondary:hover{color:#fff;background-color:#5a6268;border-color:#545b62;}
+.btn-secondary:focus{box-shadow:0 0 0 .2rem rgba(108,117,125,.5);}
+.btn-secondary.disabled,.btn-secondary:disabled{color:#fff;background-color:#6c757d;border-color:#6c757d;}
+.btn-info{color:#fff;background-color:#17a2b8;border-color:#17a2b8;}
+.btn-info:hover{color:#fff;background-color:#138496;border-color:#117a8b;}
+.btn-info:focus{box-shadow:0 0 0 .2rem rgba(23,162,184,.5);}
+.btn-info:disabled{color:#fff;background-color:#17a2b8;border-color:#17a2b8;}
+.dropdown-toggle::after{display:inline-block;width:0;height:0;margin-left:.255em;vertical-align:.255em;content:"";border-top:.3em solid;border-right:.3em solid transparent;border-bottom:0;border-left:.3em solid transparent;}
+.dropdown-toggle:empty::after{margin-left:0;}
+.dropdown-menu{position:absolute;top:100%;left:0;z-index:1000;display:none;float:left;min-width:10rem;padding:.5rem 0;margin:.125rem 0 0;font-size:1rem;color:#212529;text-align:left;list-style:none;background-color:#fff;background-clip:padding-box;border:1px solid rgba(0,0,0,.15);border-radius:.25rem;}
+.dropdown-item{display:block;width:100%;padding:.25rem 1.5rem;clear:both;font-weight:400;color:#212529;text-align:inherit;white-space:nowrap;background-color:transparent;border:0;}
+.dropdown-item:focus,.dropdown-item:hover{color:#16181b;text-decoration:none;background-color:#f8f9fa;}
+.dropdown-item:active{color:#fff;text-decoration:none;background-color:#007bff;}
+.dropdown-item:disabled{color:#6c757d;background-color:transparent;}
+.btn-group{position:relative;display:-webkit-inline-box;display:-ms-inline-flexbox;display:inline-flex;vertical-align:middle;}
+.btn-group>.btn{position:relative;-webkit-box-flex:0;-ms-flex:0 1 auto;flex:0 1 auto;}
+.btn-group>.btn:hover{z-index:1;}
+.btn-group>.btn:active,.btn-group>.btn:focus{z-index:1;}
+.btn-group>.btn:first-child{margin-left:0;}
+.tab-content>.tab-pane{display:none;}
+.tab-content>.active{display:block;}
+.d-none{display:none!important;}
+@media (min-width:576px){
+.d-sm-block{display:block!important;}
+}
+@media (min-width:992px){
+.d-lg-none{display:none!important;}
+.d-lg-table-cell{display:table-cell!important;}
+}
+.float-right{float:right!important;}
+.mb-3{margin-bottom:1rem!important;}
+.text-right{text-align:right!important;}
+@media print{
+*,::after,::before{text-shadow:none!important;box-shadow:none!important;}
+a:not(.btn){text-decoration:underline;}
+thead{display:table-header-group;}
+img,tr{page-break-inside:avoid;}
+.container{min-width:992px!important;}
+.table{border-collapse:collapse!important;}
+.table td,.table th{background-color:#fff!important;}
+}
+.fal{font-family:Font\ Awesome\ 5\ Pro;font-weight:300;}
+.fas{font-family:Font\ Awesome\ 5\ Pro;font-weight:900;}
+.fal,.fas{-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;display:inline-block;font-style:normal;font-variant:normal;text-rendering:auto;line-height:1;}
+.fa-angle-double-down:before{content:"\f103";}
+.fa-asterisk:before{content:"\f069";}
+.fa-check-circle:before{content:"\f058";}
+.fa-star:before{content:"\f005";}
+.btn:focus,.dropdown-item:focus{-webkit-box-shadow:none!important;box-shadow:none!important;outline:none!important;}
+.small,small{font-size:12px;}
+a{color:#2e7ad0;-webkit-transition:color .3s ease;-moz-transition:color .3s ease;-ms-transition:color .3s ease;-o-transition:color .3s ease;transition:color .3s ease;}
+a:hover,a>*:hover{color:#074387;}
+.dropdown-menu{background-color:#fafafa;box-shadow:0 2px 10px 0 rgba(27,43,68,.2);border-radius:2px;border:none;}
+.dropdown-menu .dropdown-item{color:#1b2b44;font-size:13px;padding:.25rem 1rem;text-transform:none;}
+.dropdown-menu .dropdown-item:focus,.dropdown-menu .dropdown-item:hover,.dropdown-menu .dropdown-item:active{color:#1b2b44;background-color:#f1f2f3;}
+.table thead th{color:#606060;font-size:13px;font-weight:600;text-transform:uppercase;border-bottom:1px solid #f1f2f3;}
+.table td,.table th{padding:10px;border-color:#f1f2f3;}
+.table th{border-top:none;}
+.unstarred{color:#ccc;font-size:14px;cursor:pointer;}
+.unstarred:hover{color:#56667f;}
+.tbl-col-sm{line-height:30px;width:25px;}
+.tbl-col-md{width:200px;}
+.tbl-rank{color:#999;font-size:12px;font-weight:600;}
+.tbl-icon{float:left;width:30px;height:30px;}
+.tbl-currency{display:block;margin-top:4px;}
+.tbl-coin-abbrev{color:#999;font-size:12px;font-weight:500;}
+.tbl-price{display:block;text-align:right;white-space:nowrap;}
+.tbl-price.small{color:#999;font-size:11px;}
+.tbl-mob-info{display:inline-block;width:100px;line-height:14px;float:left;}
+.tbl-mob-info.smaller{letter-spacing:-.3px;}
+.mob-info-title,.mob-info-value{display:inline-block;float:left;color:#999;white-space:nowrap;}
+.mob-info-title{width:42px;}
+.mob-info-value{width:58px;text-align:right;}
+.small-chart-container{float:right;}
+.small-chart{width:120px;height:38px;margin:0;padding:0;}
+.table.coinlist .dropdown-menu{width:73px;min-width:73px;left:auto!important;right:0!important;}
+.table.coinlist .dropdown-menu .dropdown-item{padding:3px 10px;}
+button.ch-period{font-weight:600;font-size:12px;white-space:nowrap;margin-top:-3px;}
+span.pr-change{display:inline-block;padding:9px 0 0 0;}
+.table.coinlist tr td .tbl-currency a{font-weight:600;}
+.table.coinlist:not(.w_single) tbody tr:hover{background-color:#fafafa;}
+@media (max-width:767px){
+.table.coinlist tr td.change-period{width:auto;max-width:110px;padding-right:3px;}
+.table.coinlist tr td.change-period span.pr-change{display:block;padding:0;font-size:13px;}
+.table.coinlist tr td{padding:5px 5px 5px 5px;}
+.table.coinlist tr th{padding:5px 5px;}
+.table.coinlist tr td.tbl-col-sm,.table.coinlist tr th.tbl-col-sm{padding-left:0;padding-right:2px;}
+.table.coinlist .tbl-col-sm{width:1px;}
+.small-chart-container{width:100%;max-width:110px;margin:0;padding:0;}
+.small-chart{width:100%;max-width:110px;height:20px;margin:0;padding:0;}
+button.ch-period{font-weight:600;font-size:11px;padding:2px 2px;white-space:nowrap;}
+}
+@media (max-width:767px){
+.coinlist-footer-controls .btn{padding:2px 5px!important;font-size:12px!important;}
+}
+.btn{padding:6px 12px 5px;font-size:13px;font-weight:600;letter-spacing:normal;text-transform:uppercase;border-radius:3px;border-color:transparent;}
+.btn:focus,.btn:active:focus{outline:0 none;}
+.btn-secondary{color:#606060;background:#fff;border:1px solid #999;}
+.btn-secondary:hover,.btn-secondary:focus,.btn-secondary:active{color:#373a3c;background:#e6e6e6;}
+.btn-info{background:#0cb3e5;}
+.btn-info:hover,.btn-info:focus,.btn-info:active{background:#31b0d5;}
+.btn-xs{font-size:11px!important;padding:2px 4px!important;}
+.btn-xs:not(:disabled):not(.disabled){cursor:pointer;}
+.price{letter-spacing:-.5px;}
+.price.up{color:#00b600;}
+.price.down{color:#fb0000;}
+.dimmed{color:#999;}
+.small{font-size:13px;}
+.smaller{font-size:11px;}
+.inv{display:none!important;}
+.fit{width:1px;padding-right:0!important;}
+@media (max-width:991px){
+.tbl-currency{margin-top:0;}
+}
+@media (max-width:767px){
+.tbl-col-md{width:130px;}
+.btn{padding:4px 6px;font-size:11px;}
+.small,.smaller{letter-spacing:-.8px;}
+.container{padding:2px 8px!important;}
+}
+@media (max-width:374px){
+.price{font-size:12px;letter-spacing:-.6px;}
+.tbl-price.small{font-size:10px;letter-spacing:-.6px;}
+.tbl-coin-abbrev{font-size:11px;}
+.tbl-mob-info{width:100px;}
+.tbl-mob-info.smaller{letter-spacing:-.4px;}
+.mob-info-title{width:47px;}
+.mob-info-value{width:53px;}
+.small-chart-container{width:100%;max-width:90px;margin:0;padding:0;}
+.small-chart{width:100%;max-width:90px;height:20px;margin:0;padding:0;}
+}
+@media (max-width:339px){
+.table.coinlist tr td{padding:5px 2px;}
+.table thead th{font-size:12px;}
+.small-chart-container{width:100%;max-width:60px;margin:0;padding:0;}
+.small-chart{width:100%;max-width:60px;height:15px;margin:0;padding:0;}
+.tbl-rank{padding:0;}
+.tbl-icon{width:20px;height:20px;margin-top:5px;}
+.tbl-mob-info{width:90px;}
+.tbl-mob-info.smaller{letter-spacing:-.4px;}
+.mob-info-title{width:34px;}
+.mob-info-value{width:56px;}
+}
+.highcharts-label{z-index:-1;}
+.highcharts-tooltip{z-index:9999!important;}
+.clickable-coin-td{cursor:pointer!important;}
+.asterisk-style{font-size:.55em;position:relative;top:-5px;margin-left:2px;}
+.mediumliq-flag{color:#999;}
+.dark a{color:#2e7ad0;}
+.dark a:hover,.dark a>*:hover{color:#fff;}
+.dark .table thead th{color:#626b7f;border-bottom:1px solid #282e3b;}
+.dark .table td,.dark .table th{border-color:#282e3b;}
+.dark .unstarred{color:#626b7f;}
+.dark .unstarred:hover{color:#fff;}
+.dark .tbl-rank{color:#626b7f;}
+.dark .tbl-coin-abbrev{color:#c9c9c9;}
+.dark .tbl-price.small{color:#c9c9c9;}
+.dark .mob-info-title,.dark .mob-info-value{color:#c9c9c9;}
+.dark .price.up{color:#26da71;}
+.dark .price.down{color:#ff5a1c;}
+.dark .price.dimmed{color:#c9c9c9;}
+.dark .btn-secondary{color:#606060;background:#282e3b;border:1px solid #383e4b;}
+.dark .btn-secondary:hover,.dark .btn-secondary:focus,.dark .btn-secondary:active{color:#373a3c;background:#e6e6e6;}
+.dark .btn-info{background:#0cb3e5;}
+.dark .btn-info:hover,.dark .btn-info:focus,.dark .btn-info:active{background:#31b0d5;}
+.dark .btn{background-color:#282e3b;color:#fff;border:none;}
+.dark .table.coinlist tr td .tbl-currency a{color:#fff;font-weight:500;}
+.dark .table.coinlist:not(.w_single) tbody tr:hover{background-color:#000c176b;}
+.dark .mediumliq-flag{color:#fff;}
+.dark button.ch-period{background-color:#1d2330;color:#626b7f;}
+.highcharts-background{fill:rgba(255,255,255,0);stroke-width:0;}
+.dark .highcharts-label-box{stroke:#444!important;}
+
+div.dark.container{
+    margin: 50px 0;
+}
+.row{
+    margin-right: 0 !important;
+}
