--- a/public/css/new_custom.css
+++ b/public/css/new_custom.css
@@ -537,3 +537,30 @@ div.dark.container{
 .row{
     margin-right: 0 !important;
 }
+.pagination>li>a{
+    background-color: rgba(255,255,255,.05);
+    color: #c9c9c9;
+}
+.pagination .disabled{
+    display: none;
+}
+
+.pagination>li>a{
+    padding: 12px;
+    border: 1px solid #252527;
+}
+.pagination>li>a:hover{
+    background: none;
+    text-decoration: none;
+    cursor: pointer;
+}
+.pagination>li:first-child>a {
+    margin-left: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.pagination>li:last-child>a {
+    margin-left: 0;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
