Added new styles to header

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -333,7 +333,7 @@ button,
     padding: 0;
     margin-bottom: 0;
     /*background: #8dc647;*/
-    background: #626b7f !important;
+    background: #626b7f;
     color: #fff;
 }
 
