--- a/public/css/new_custom.css
+++ b/public/css/new_custom.css
@@ -8,9 +8,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, label{
     margin-top: -15px;
     font-size: 13px !important;
 }
-#top .navbar-static-top, #top .navbar{
+/*#top .navbar-static-top, #top .navbar{
     background: none !important;
-}
+}*/
 #top .navbar-brand{
     padding: 0 !important;
     padding-top: 10px;
@@ -563,4 +563,13 @@ div.dark.container{
     margin-left: 0;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
+}
+.mynav{
+    display: block;
+    padding-top: 15px !important;
+    padding-bottom: 5px !important;
+    background-color: rgba(255, 255, 255, .05) !important;
+    margin-top: 36px;
+    border-top: 1px solid #282e3b;
+    border-bottom: 1px solid #282e3b;
 }
