--- a/public/css/newcustom.css
+++ b/public/css/newcustom.css
@@ -408,9 +408,19 @@ button,html [type="button"]{-webkit-appearance:button;}
 .container{width:100%;padding-right:15px;padding-left:15px;margin-right:auto;margin-left:auto;}
 @media (min-width:576px){
 .container{max-width:540px;}
+.slogan {
+    font-style: italic;
+    font-size: 15px;
+    margin: 13px 15px 12px;
+}
 }
 @media (min-width:768px){
 .container{max-width:720px;}
+.slogan {
+    font-style: italic;
+    font-size: 15px;
+    margin: 13px 15px 12px;
+}
 }
 @media (min-width:992px){
 .container{max-width:960px;}
