--- a/public/css/newcustom.css
+++ b/public/css/newcustom.css
@@ -754,6 +754,31 @@ footer{
     margin: 13px 15px;
 }
 
+.crypto-currency{
+    font-weight: 400;
+    color: #fff;
+    font-size: 15px !important;
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+    font-family: Ubuntu, Arial, sans-serif;
+    text-transform: uppercase;
+    font-size: 13px !important;
+    display: block;
+    padding: .5rem 1rem;
+}
+.crypto-currency:hover{
+    font-weight: 400;
+    color: #fff;
+    font-size: 15px !important;
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+    font-family: Ubuntu, Arial, sans-serif;
+    text-transform: uppercase;
+    font-size: 13px !important;
+    display: block;
+    padding: .5rem 1rem;
+}
+
 #container-chart{
     margin-top: 30px;
 }
