--- a/public/css/newcustom.css
+++ b/public/css/newcustom.css
@@ -28,7 +28,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, label{
     text-align: center;
     padding: 5px;
 }
-
+.content-buttons-box{
+    display: flex;
+}
 .align-graph{
     overflow: hidden; 
     text-align: left;
