--- a/public/css/newcustom.css
+++ b/public/css/newcustom.css
@@ -20,7 +20,16 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, label{
 .menu-front-mobile{
     display: none !important;
 }
-
+.basis-button{
+    width: 400px;
+    height: 40px;
+    background-color: #003B53;
+    border: none;
+    border-radius: 10px;
+    color: #fff; 
+    text-align: center;
+    padding: 5px;
+}
 .sort-buttton{
     width: 400px;
     height: 40px;
@@ -40,6 +49,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, label{
 }
 .space-button{
     margin-left: 20px;
+}
+.pl-8{
+    padding-left: 8px;
 }
 .navbar-nav .nav-link{
     font-size: 13px !important;
@@ -114,6 +126,16 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, label{
         text-align: center;
         padding: 5px;
     }
+    .basis-button{
+        width: 240px;
+        height: 40px;
+        background-color: #003B53;
+        border: none;
+        border-radius: 10px;
+        color: #fff; 
+        text-align: center;
+        padding: 5px;
+    }
     .slogan {
         font-style: italic;
         font-size: 15px;
@@ -123,6 +145,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, label{
 @media screen and (max-width: 420px){
     .content-image-header p{
         font-size: 18px;
+    }
+    .d-flex{
+        display: block !important;
     }
     .sort-buttton{
         width: 170px;
@@ -140,6 +165,19 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, label{
         margin: 13px 15px 12px;
     }
 
+}
+@media screen and (max-width: 361px){
+    .sort-buttton{
+        width: 170px;
+        height: 40px;
+        background-color: #003B53;
+        border: none;
+        border-radius: 10px;
+        color: #fff; 
+        text-align: center;
+        padding: 5px;
+        margin: 0px 17px 0px 0px !important;
+    }
 }
 /*************************/
 .home-table .table td{
@@ -858,7 +896,7 @@ th[onClick] {
         margin-bottom: 30px;
     }
     .sort-buttton{
-        width: 240px;
+        width: 100px;
         height: 40px;
         background-color: #003B53;
         border: none;
@@ -866,7 +904,7 @@ th[onClick] {
         color: #fff; 
         text-align: center;
         padding: 5px;
-        margin: 30px 0px 0px 30px
+        margin: 0px 8px 0px 0px;
     }
     .slogan {
         font-style: italic;
