--- a/public/css/newcustom.css
+++ b/public/css/newcustom.css
@@ -225,10 +225,6 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, label{
     text-align: right;
 }
 
-.home-table .table td:nth-child(1), .table th:nth-child(1){
-    text-align: left !important;
-}
-
 #pagination{
     border: none!important
 }
@@ -586,7 +582,7 @@ a:hover,a>*:hover{color:#074387;}
 .tbl-col-sm{line-height:30px;width:25px;}
 .tbl-col-md{width:200px;}
 .tbl-rank{color:#999;font-size:12px;font-weight:600;}
-.tbl-icon{float:left;width:30px;height:30px;}
+.tbl-icon{width:30px;height:30px;}
 .tbl-currency{display:block;}
 .tbl-coin-abbrev{color:#999;font-size:12px;font-weight:500;}
 .tbl-price{display:block;text-align:right;white-space:nowrap;}
